--- a/index2.html
+++ b/index2.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>Aditya</title>
+        <title>koushik</title>
         <style>
             body {
                 background-color: white;
